# enso

./: Cargo.toml
app/gui/: CHANGELOG.md  Cargo.toml
app/gui/src/: lib.rs
app/gui/src/controller/: searcher.rs
app/gui/src/presenter/graph/: state.rs
app/gui/view/: Cargo.toml
app/gui/view/graph-editor/: Cargo.toml
app/gui/view/graph-editor/src/: lib.rs
app/gui/view/graph-editor/src/component/node/input/: area.rs
app/gui/view/src/: lib.rs
distribution/lib/Standard/Base/0.2.32-SNAPSHOT/src/Data/: Vector.enso
distribution/lib/Standard/Database/0.2.32-SNAPSHOT/src/Data/: Table.enso
distribution/lib/Standard/Table/0.0.0-dev/src/Data/: Table.enso
distribution/lib/Standard/Table/0.2.32-SNAPSHOT/src/Data/: Sort_Method.enso  Table.enso
distribution/lib/Standard/Table/0.2.32-SNAPSHOT/src/Internal/: Table_Helpers.enso
engine/runtime/src/main/resources/: Builtins.enso
gui/src/rust/ide/src/: config.rs
gui/src/rust/ide/src/controller/: ide.rs  searcher.rs
gui/src/rust/ide/src/controller/ide/: desktop.rs  plain.rs
gui/src/rust/ide/src/ide/: initializer.rs  integration.rs
gui/src/rust/ide/view/src/: root.rs
gui/src/rust/ide/view/welcome-screen/: Cargo.toml
gui/src/rust/ide/view/welcome-screen/src/: lib.rs
lib/rust/ensogl/core/: Cargo.toml
lib/rust/ensogl/example/: Cargo.toml
lib/rust/logger/: Cargo.toml
lib/rust/prelude/: Cargo.toml
test/Table_Tests/src/: Common_Table_Spec.enso
test/Tests/src/Data/: Vector_Spec.enso
test/Tests/src/Data/Ordering/: Natural_Order_Spec.enso  Vector_Lexicographic_Order_Spec.enso
(+4 files in other folders)
