[package]
name = "enso-gui"
version = "0.1.0"
authors = ["Enso Team <contact@enso.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }
#uuid = { version = "0.8.2", features = ["wasm-bindgen"] }
#getrandom = {version =  "0.2.4", features = ["js"]}


# wasm-bindgen version 0.2.79 is causing issues with clippy.
# See for more information. https://github.com/rustwasm/wasm-bindgen/issues/2774
# Should be removed once 0.2.80 is available.
wasm-bindgen = { version = "=0.2.78" }

