[package]
name = "welcome-screen"
version = "0.1.0"
edition = "2021"
authors = ["Enso Team <contact@enso.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ensogl = { path = "../../../ensogl" }
enso-frp = { path = "../../../lib/frp" }
wasm-bindgen = { version = "=0.2.58", features = [
  "nightly",
  "serde-serialize"
] }
utils = { path = "/home/ilya/enso/gui/src/rust/ide/lib/utils/" }
web-sys = { version = "0.3.4", features = [] }
